--- a/app/views/suggestion/index.html.erb
+++ b/app/views/suggestion/index.html.erb
@@ -1,2 +1,18 @@
 <h1>Welcome to the Suggestion Box!</h1>
-<p>Find me in app/views/suggestion/index.html.erb</p>
+<p>Add a new suggestion below:</p>
+
+<%= form_for :suggestion, url: suggestions_path do |f| %>
+  <p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </p>
+ 
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+  </p>
+ 
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
